# fastapi-backend-template

./: .env.example  README.md  cookiecutter.json  main.py  pyproject.toml
app/: __init__.py
app/core/: __init__.py  logger.py  settings.py
app/infrastructure/: __init__.py  http_client.py
app/middleware/: __init__.py
app/models/: __init__.py
app/routers/: __init__.py  health.py
app/schemas/: __init__.py
app/utils/: __init__.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py
{{ cookiecutter.project_slug }}/: .env.example  README.md  main.py  pyproject.toml
{{ cookiecutter.project_slug }}/app/core/: __init__.py  logger.py  settings.py
{{ cookiecutter.project_slug }}/app/infrastructure/: __init__.py  database.py  http_client.py
{{ cookiecutter.project_slug }}/app/models/: __init__.py  user.py
{{ cookiecutter.project_slug }}/app/routers/: __init__.py  health.py  users.py
{{ cookiecutter.project_slug }}/app/schemas/: __init__.py  user.py
{{ cookiecutter.project_slug }}/app/services/: __init__.py  user_service.py
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/tests/unit/: test_health.py  test_users.py
